--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,5 +20,5 @@ jobs:
           pip install pytest
       - name: Run tests
         run: |
-          pytest
+          pytest tests.py
          
